add b-matrix and base operations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(tests tests.cpp)
 target_link_libraries(tests PRIVATE matrix_lib GTest::gtest GTest::gtest_main)
-add_test(NAME matrix_lib_test COMMAND tests)
+add_test(NAME matrix_lib_test COMMAND tests --gtest_color=yes)
 gtest_discover_tests(tests)
