--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_compile_options(-O2)
+add_compile_options(-O2 -mavx -I/usr/local/include/eigen3/)
 enable_testing()
 
 find_package(GTest REQUIRED)
