--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(matrix_lib)
 
-add_executable(main main.c)
+add_executable(main main.cpp)
 target_link_libraries(main PRIVATE matrix_lib)
