change tests file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_compile_options(-O2 -mavx -I/usr/local/include/eigen3/)
 enable_testing()
 
+find_package(BLAS REQUIRED)
 find_package(GTest REQUIRED)
 include(GoogleTest)
 
