--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,13 @@
 add_subdirectory(matrix_lib)
 
-add_executable(main main.cpp blas_inverse.cpp simple_inverse.cpp)
+add_executable(main
+    main.cpp
+    test_inverse/blas_inverse.cpp
+    test_inverse/simple_inverse.cpp)
+
 target_link_libraries(main PRIVATE matrix_lib)
 target_link_libraries(main PRIVATE openblas)
 target_link_libraries(main PRIVATE m)
-
 
 find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
